unbroken text fix
added break all to paragraph text to stop long links overflowing

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -187,6 +187,10 @@ td,
 th {
   padding: 0;
 }
+p {
+  word-break: break-all;
+  word-break: break-word;
+}
 @media print {
   * {
     color: #000 !important;
